--- a/witness-config-solana.yaml
+++ b/witness-config-solana.yaml
@@ -43,6 +43,9 @@ cashiers:
       # SENTAI
       - token1: "CXPLyc3EX8WySgEXLbjhuA7vy8EKQokVJYQuJm2jpump"
         token2: "0xeaaf0e6Be5B33ee472E93ac7c1FCc10f57186986"
+      # N3
+      - token1: "9s7SZCXGU5i89hDH4zxYWo9ZdRL9ejTMo85VUR96wU5V"
+        token2: "0x4D736d611a309ce036c9F62efEB1Af2BaF14Bb2A"
     decimalRound:
       - token1: "6hyKjmnuX6je63fEhWnog9kVnqp9WeKWFeXxnYeUMW7d"
         amount: 9
