update relayer configs

--- a/relayer-config-iotex-testnet.yaml
+++ b/relayer-config-iotex-testnet.yaml
@@ -9,7 +9,7 @@ validators:
   - withPayload: true
     address: "0xf8efCFF959Af393FdfA8fc0fccedf0E25Fc194e6"
     cashiers:
-      - "0xBAe51dAad36A1fEA46492F35E04380B3db169A97"
+      - address: "0xBAe51dAad36A1fEA46492F35E04380B3db169A97"
 database:
   uri: "root:kdfjjrU64fjK58H@tcp(database:3306)/relayer?parseTime=true"
   driver: "mysql"
