--- a/relayer-config-sepolia.yaml
+++ b/relayer-config-sepolia.yaml
@@ -10,7 +10,7 @@ validators:
   - withPayload: true
     address: "0xfbaDFfe2B6c7D700eF74B130f4154dF3412eB0E6"
     cashiers:
-      - "0xe17f31649C42CE0304008C81Fb7A912cE4e82380"
+      - address: "0xe17f31649C42CE0304008C81Fb7A912cE4e82380"
 database:
   uri: "root:kdfjjrU64fjK58H@tcp(database:3306)/relayer?parseTime=true"
   driver: "mysql"
