--- a/witness-config-solana.yaml
+++ b/witness-config-solana.yaml
@@ -46,6 +46,9 @@ cashiers:
       # N3
       - token1: "C7DpniLsJBFEZvt6SnS5Ac8tdwuxCW4T3mS1JrfntDdX"
         token2: "0x7f6F149FEC648Abf4eE8c559EB24D8010ab1025E"
+      # ROAM
+      - token1: "RoamA1USA8xjvpTJZ6RvvxyDRzNh6GCA1zVGKSiMVkn"
+        token2: "0x1B372E0C1bD1670A22F3Ea4d04F1c80F7FcBd2e5"
     decimalRound:
       - token1: "6hyKjmnuX6je63fEhWnog9kVnqp9WeKWFeXxnYeUMW7d"
         amount: 9
