--- a/relayer-config-iotex-testnet.yaml
+++ b/relayer-config-iotex-testnet.yaml
@@ -15,7 +15,7 @@ validators:
     cashiers:
       - address: "0xBAe51dAad36A1fEA46492F35E04380B3db169A97"
 database:
-  uri: "root:kdfjjrU64fjK58H@tcp(database:3306)/relayer?parseTime=true"
+  uri: "root:kdfjjrU64fjK58H@tcp(localhost:13306)/relayer?parseTime=true"
   driver: "mysql"
 transferTableName: "iotex_testnet_transfers"
 witnessTableName: "iotex_testnet_witnesses"
