--- a/relayer-config-bsc-testnet.yaml
+++ b/relayer-config-bsc-testnet.yaml
@@ -12,7 +12,7 @@ validators:
     cashiers:
       - address: "0x5E0Eba3f0c9e047BbcD88441865F97643ab97Fd3"
 database:
-  uri: "root:kdfjjrU64fjK58H@tcp(database:3306)/relayer?parseTime=true"
+  uri: "root:kdfjjrU64fjK58H@tcp(localhost:13306)/relayer?parseTime=true"
   driver: "mysql"
 transferTableName: "bsc_testnet_transfers"
 witnessTableName: "bsc_testnet_witnesses"
