update bsc testnet rpc

--- a/witness-config-bsc-testnet.secret.yaml
+++ b/witness-config-bsc-testnet.secret.yaml
@@ -1,4 +1,4 @@
-clientURL: "https://bsc-testnet-rpc.publicnode.com"
+clientURL: "https://bsc-prebsc-dataseed.bnbchain.org"
 privateKey: ""
 relayerURL: ""
 slackWebHook: ""
