--- a/relayer-config-bsc-testnet.yaml
+++ b/relayer-config-bsc-testnet.yaml
@@ -1,6 +1,6 @@
 chain: "bsc-testnet"
 interval: 5m
-clientURL: "https://bsc-testnet-rpc.publicnode.com"
+clientURL: "https://bsc-prebsc-dataseed.bnbchain.org"
 ethConfirmBlockNumber: 20
 ethGasPriceLimit: 10000000000
 grpcPort: 7102
